--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,53 +1,29 @@
-nav {
-  background-color: #333;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+.navbar {
+  background-color: #37b337;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 30px 40px;
 }
 
-ul {
+.navbar ul {
+  margin: 0;
+  padding: 0;
   display: flex;
-  gap: 1rem;
+}
+
+.navbar li {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin-right: 1rem;
 }
 
-li {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: #fff;
+.navbar > ul > li > a {
+  color: #fff !important;
   text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-  padding: 0.5rem 1rem;
-  border-radius: 0.3rem;
-  transition: background-color 0.3s ease;
+  transition: all 0.2s ease-in-out;
 }
 
-a:hover {
-  background-color: #555;
-}
-
-@media screen and (max-width: 600px) {
-  nav {
-    flex-direction: column;
-    align-items: stretch;
-    padding: 0.5rem;
-  }
-
-  ul {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-
-  a {
-    text-align: center;
-    padding: 0.5rem;
-    border-radius: 0;
-  }
+.navbar a:hover {
+  color: #37b337;
+  background-color: #585e59;
+  border-radius: 10px;
+  padding: 20px 30px;
 }
