--- a/src/components/formproduct.js/form.style.css
+++ b/src/components/formproduct.js/form.style.css
@@ -1,8 +1,8 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: #f7f7f7;
+  align-items: left;
+  background-color: #abdbb7;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
