--- a/src/components/formproduct.js/form.style.css
+++ b/src/components/formproduct.js/form.style.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: left;
-  background-color: #abdbb7;
+  background-color: #ffffff;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
   width: 50%;
   margin: 0 auto;
 }
@@ -13,7 +13,7 @@
 input,
 textarea {
   border-radius: 5px;
-  border: none;
+  border-color: #000000;
   padding: 10px;
   margin-bottom: 20px;
   width: 100%;
@@ -25,8 +25,8 @@ label {
 }
 
 button[type="submit"] {
-  background-color: #4caf50;
-  color: white;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -35,5 +35,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #3e8e41;
+  background-color: #727272;
 }
