--- a/src/components/cart/cart.styles.css
+++ b/src/components/cart/cart.styles.css
@@ -7,3 +7,75 @@
   background-color: #f5f5f5;
   z-index: 10;
 }
+
+.cart-container {
+  background-color: #f8f8f8;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 25%;
+  background-color: #f5f5f5;
+  z-index: 10;
+}
+
+.cart-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-icon {
+  font-size: 2rem;
+  margin-right: 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+th,
+td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #525252;
+}
+
+.pay-button {
+  margin-left: 20px;
+  background-color: #6b6d6b;
+}
+
+.pay-button:hover {
+  background-color: #000000;
+}
+
+.cart-total {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
