--- a/src/components/cart/cart.styles.css
+++ b/src/components/cart/cart.styles.css
@@ -1,13 +1,3 @@
-.barra-vertical {
-  position: fixed;
-  right: 0;
-  top: 0;
-  height: 100vh;
-  width: 20%;
-  background-color: #f5f5f5;
-  z-index: 10;
-}
-
 .cart-container {
   background-color: #f8f8f8;
   padding: 20px;
@@ -15,8 +5,8 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   right: 0;
-  top: 0;
-  height: 100vh;
+  top: 20px;
+  bottom: 20px;
   width: 25%;
   background-color: #f5f5f5;
   z-index: 10;
@@ -51,7 +41,7 @@ th {
 }
 
 button {
-  padding: 10px 20px;
+  padding: 5px 5px;
   background-color: #000000;
   color: #fff;
   border: none;
@@ -78,4 +68,9 @@ button:hover {
   justify-content: space-between;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.no-margen {
+  margin: 0px;
+  padding: 0px;
 }
